k8s/k8s-2/client-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      label:
        component: web
    spec:
      containers:
        - name: client
          image: johnmops/jen-ansible:1.0
          ports:
            - containerPort: 3000
