k8s/k8s-2/api-cluster.yml
#Connects the internal pods without access from the outside world.
apiVersion: v1
kind: Service
metadata:
  name: client-cluster
spec:
  type: ClusterIP
  selector:
    component: api
  ports:
    - port: 5000 #can be different
      targetPort: 5000
