k8s/k8s-2/api-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
        - name: client
          image: johnmops/jen-ansible:1.0
          ports:
            - containerPort: 5000


---


#Connects the internal pods without access from the outside world.
apiVersion: v1
kind: Service
metadata:
  name: client-cluster
spec:
  type: ClusterIP
  selector:
    component: api
  ports:
    - port: 5000 #can be different
      targetPort: 5000
