k8s/k8s-2/client-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: johnmops/jen-ansible:1.0
          ports:
            - containerPort: 3000

---

#Connects the internal pods without access from the outside world - clusterIP
apiVersion: v1
kind: Service
metadata:
  name: client-cluster
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 3000 #can be different
      targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: client-node-port
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 8080
      nodePort: 31515
  selector:
    component: web
